feat(course): get course details
